[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=telliot_kadena
version = attr: telliot_kadena.__version__
author=Tellor Development Community
author_email=info@tellor.io
description=Tools for interacting with Tellor Protocol smart contracts on Kadena.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/tellor-io/telliot_kadena
license=MIT
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords=
    oracle
    kadena
    tellor
    chainweb
    blockchain

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-cov
    tox
install_requires =
    telliot-feeds
    PyNaCl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kadena = telliot_kadena.cli.main:main

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv,venv38,venv39
ignore = E203, E266, E501, W503, E731
max-line-length = 120
max-complexity = 19
select = B,C,E,F,W,T4,B9
